Fix seekbar preference margins in Lollipop